; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs3xdr.c_encode_diropargs3.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs3xdr.c_encode_diropargs3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdr_stream = type { i32 }
%struct.nfs_fh = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xdr_stream*, %struct.nfs_fh*, i8*, i32)* @encode_diropargs3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @encode_diropargs3(%struct.xdr_stream* %0, %struct.nfs_fh* %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.xdr_stream*, align 8
  %6 = alloca %struct.nfs_fh*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.xdr_stream* %0, %struct.xdr_stream** %5, align 8
  store %struct.nfs_fh* %1, %struct.nfs_fh** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.xdr_stream*, %struct.xdr_stream** %5, align 8
  %10 = load %struct.nfs_fh*, %struct.nfs_fh** %6, align 8
  %11 = call i32 @encode_nfs_fh3(%struct.xdr_stream* %9, %struct.nfs_fh* %10)
  %12 = load %struct.xdr_stream*, %struct.xdr_stream** %5, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @encode_filename3(%struct.xdr_stream* %12, i8* %13, i32 %14)
  ret void
}

declare dso_local i32 @encode_nfs_fh3(%struct.xdr_stream*, %struct.nfs_fh*) #1

declare dso_local i32 @encode_filename3(%struct.xdr_stream*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
